finishing touch to MSSM_118 consistency check

--- a/notebook/2020-04-21-bsm-pipeline-mssm-118/2020-04-21-bsm-pipeline-mssm-118.ipynb
+++ b/notebook/2020-04-21-bsm-pipeline-mssm-118/2020-04-21-bsm-pipeline-mssm-118.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
     "key=~/AWS-accounts/chesslab/id_rsa-aws-user-024812372148\n",
     "srcdir=/efs/tests/MSSM_118/MSSM_118_NeuN_pl/gatk-hc\n",
     "dstdir=~/projects/bsm/results/2020-04-21-bsm-pipeline-mssm-118/gatk-hc\n",
-    "if test ! -d $dstdir/attila; then\n",
+    "if false; then\n",
     "mkdir -p $dstdir\n",
     "scp -r -i $key $host:$srcdir $dstdir/attila\n",
     "fi"
@@ -270,8 +270,6 @@
       "/home/attila/projects/bsm/results/2020-04-21-bsm-pipeline-mssm-118/gatk-hc/isec:\n",
       "0000.vcf\n",
       "0001.vcf\n",
-      "0002.vcf\n",
-      "0003.vcf\n",
       "README.txt\n",
       "report\n",
       "\n",
@@ -302,9 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 private to\ttaejeong/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n",
-      "1 private to\tattila/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n",
-      "5085446 shared by both\ttaejeong/MSSM_118_NeuN_pl.ploidy_50.vcf.gz attila/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n"
+      "3 1 "
      ]
     }
    ],
@@ -323,6 +319,8 @@
     "sed -n \"/$vcf/ { s/^.*\\(\\(private to\\|shared by\\).*$\\)/\\1/; p }\" README.txt\n",
     "done > report\n",
     "fi\n",
+    "rm 000[23].vcf 2> /dev/null # remove the large files\n",
+    "cd ..; rm -rf attila taejeong 2> /dev/null\n",
     "cat report"
    ]
   },
@@ -386,13 +384,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 39179,\n",
-      "  \"iopub_port\": 39525,\n",
-      "  \"stdin_port\": 50009,\n",
-      "  \"control_port\": 32937,\n",
-      "  \"hb_port\": 36997,\n",
+      "  \"shell_port\": 49007,\n",
+      "  \"iopub_port\": 38191,\n",
+      "  \"stdin_port\": 34075,\n",
+      "  \"control_port\": 38463,\n",
+      "  \"hb_port\": 57675,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"6c653a70-d15a7ed1e116bacdeec6ae6d\",\n",
+      "  \"key\": \"e37f5eae-c241d5322c997957ff6bf22c\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -401,7 +399,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-8768ade1-f216-4873-99bd-7515be28785d.json\n",
+      "    $> jupyter <app> --existing kernel-87146f78-f05e-4769-9f93-27d8ecfef0d7.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
