--- a/notebook/2020-04-07-GENEWIZ-samples/2020-04-07-GENEWIZ-samples.ipynb
+++ b/notebook/2020-04-07-GENEWIZ-samples/2020-04-07-GENEWIZ-samples.ipynb
@@ -662,7 +662,7 @@
    "source": [
     "sn = pd.read_csv('/home/attila/projects/bsm/tables/samples-from-Chaggai.csv', index_col='GENEWIZ_serialn')\n",
     "s3prefix = 's3://chesslab-bsmn/GENEWIZ/30-317737003/'\n",
-    "slistarray = np.array([[sn.loc[re.sub('(^[0-9A-Za-z]+)_.*', '\\\\1', filename), 'CMC_simple_id'], filename, s3prefix + filename] for filename in from_gw['filename']])\n",
+    "slistarray = np.array([[sn.loc[re.sub('(^[0-9A-Za-z]+)_.*', '\\\\1', filename), 'CMC_simple_id'] + '_NeuN_pl', filename, s3prefix + filename] for filename in from_gw['filename']])\n",
     "slist = pd.DataFrame(slistarray, columns=['#sample_id', 'file_name', 'location'])\n",
     "slistpath = '/home/attila/projects/bsm/results/2020-04-07-GENEWIZ-samples/sample_list.tsv'\n",
     "slist.to_csv(slistpath, sep='\\t', header=True, index=False)"
@@ -678,13 +678,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 54119,\n",
-      "  \"iopub_port\": 39417,\n",
-      "  \"stdin_port\": 37503,\n",
-      "  \"control_port\": 59531,\n",
-      "  \"hb_port\": 40129,\n",
+      "  \"shell_port\": 56259,\n",
+      "  \"iopub_port\": 45899,\n",
+      "  \"stdin_port\": 38951,\n",
+      "  \"control_port\": 42865,\n",
+      "  \"hb_port\": 55459,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"0ea95130-2f86f0fb69a1962aeb806f9a\",\n",
+      "  \"key\": \"010056a5-eaddbc0a04760d0677b05776\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -693,7 +693,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-b617bb19-c386-4cec-8371-c93724c5884f.json\n",
+      "    $> jupyter <app> --existing kernel-d10fd373-efb3-43f4-b011-1d3d5363639b.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -703,6 +703,13 @@
    "source": [
     "%connect_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -721,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
