--- a/notebook/2020-04-21-bsm-pipeline-mssm-118/2020-04-21-bsm-pipeline-mssm-118.ipynb
+++ b/notebook/2020-04-21-bsm-pipeline-mssm-118/2020-04-21-bsm-pipeline-mssm-118.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4  syn21966895  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,15 +257,9 @@
      "output_type": "stream",
      "text": [
       "/home/attila/projects/bsm/results/2020-04-21-bsm-pipeline-mssm-118/gatk-hc:\n",
-      "attila\n",
       "isec\n",
       "report\n",
       "taejeong\n",
-      "\n",
-      "/home/attila/projects/bsm/results/2020-04-21-bsm-pipeline-mssm-118/gatk-hc/attila:\n",
-      "hold_jid\n",
-      "MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n",
-      "MSSM_118_NeuN_pl.ploidy_50.vcf.gz.tbi\n",
       "\n",
       "/home/attila/projects/bsm/results/2020-04-21-bsm-pipeline-mssm-118/gatk-hc/isec:\n",
       "0000.vcf\n",
@@ -293,14 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 1 "
+      "3 private to\ttaejeong/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n",
+      "1 private to\tattila/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n",
+      "5085446 shared by both\ttaejeong/MSSM_118_NeuN_pl.ploidy_50.vcf.gz attila/MSSM_118_NeuN_pl.ploidy_50.vcf.gz\n"
      ]
     }
    ],
@@ -321,7 +317,7 @@
     "fi\n",
     "rm 000[23].vcf 2> /dev/null # remove the large files\n",
     "cd ..; rm -rf attila taejeong 2> /dev/null\n",
-    "cat report"
+    "cat isec/report"
    ]
   },
   {
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -384,13 +380,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 59407,\n",
-      "  \"iopub_port\": 42275,\n",
-      "  \"stdin_port\": 49669,\n",
-      "  \"control_port\": 44109,\n",
-      "  \"hb_port\": 41689,\n",
+      "  \"shell_port\": 49193,\n",
+      "  \"iopub_port\": 42321,\n",
+      "  \"stdin_port\": 46011,\n",
+      "  \"control_port\": 55969,\n",
+      "  \"hb_port\": 60721,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"abb40d18-e1ad1bb2398c583ed00e7b27\",\n",
+      "  \"key\": \"db012786-a1947e3ecd6b88a1be720519\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -399,7 +395,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-063d02f0-2354-4e89-9d36-7a5535cd02bb.json\n",
+      "    $> jupyter <app> --existing kernel-54f6489a-334e-42ac-b04f-c388e41e7ca2.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
