--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This sheet was created by Chaggai.  It had a few missing entries in the `PFC #` column, which I manually filled out with the `Institution Dissection ID` using `CMC_Human_brainRegion_metadata.csv`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +149,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +172,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +196,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +801,7 @@
        "[93 rows x 34 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4016,7 +4014,7 @@
        "[216 rows x 236 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4028,7 +4026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4036,13 +4034,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 56483,\n",
-      "  \"iopub_port\": 55015,\n",
-      "  \"stdin_port\": 53563,\n",
-      "  \"control_port\": 47913,\n",
-      "  \"hb_port\": 51681,\n",
+      "  \"shell_port\": 48991,\n",
+      "  \"iopub_port\": 34399,\n",
+      "  \"stdin_port\": 36379,\n",
+      "  \"control_port\": 56461,\n",
+      "  \"hb_port\": 57207,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"489ddb3e-398de3c50713d7fa2e1fc246\",\n",
+      "  \"key\": \"8310aed9-d5f55fd5962ecc194fb241ea\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -4051,7 +4049,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-6791a9bf-4600-470f-bc32-afc5d810978e.json\n",
+      "    $> jupyter <app> --existing kernel-32480bb8-1e67-452b-8f8c-3489430fe5fc.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -4086,7 +4084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
