new S3 manifest functions documented

--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I extend the cmc_submit2ndar.py script with functionality to upload data from an AWS S3 bucket."
+    "Here I extend the cmc_submit2ndar.py script with functionality to upload data from an AWS S3 bucket.  This work begins with looking at metadata from the CommonMind Consortium (CMC) and the format of manifests required by NDA.  Then I intruduce new functions in the cmc_submit2ndar python module that produce new manifests for the data from the s3://chesslab-bsmn bucket.  Finally I validete these manifests with NDA's validation tool. "
    ]
   },
   {
@@ -26,7 +26,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting metadata"
+    "## Reviewing metadata and standards\n",
+    "### Getting metadata"
    ]
   },
   {
@@ -51,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NDA manifest files"
+    "NDA manifest template files"
    ]
   },
   {
@@ -82,13 +83,13 @@
     "# CMC_Human_WGS_metadata_working.csv\n",
     "#syn.get('syn17021773')\n",
     "# CMC_Human_clinical_metadata.csv\n",
-    "cmc_clinical_syn = syn.get('syn2279441', downloadLocation=wdir)\n",
+    "cmc_clinical_syn = syn.get('syn2279441', downloadLocation=wdir, ifcollision='overwrite.local')\n",
     "cmc_clinical = pd.read_csv(cmc_clinical_syn.path, index_col='Individual ID')\n",
     "# CMC_Human_brainRegion_metadata.csv\n",
-    "cmc_brainreg_syn = syn.get('syn21446693', downloadLocation=wdir)\n",
+    "cmc_brainreg_syn = syn.get('syn21446693', downloadLocation=wdir, ifcollision='overwrite.local')\n",
     "cmc_brainreg = pd.read_csv(cmc_brainreg_syn.path)\n",
     "# CMC_Human_isolation_metadata_DNA.csv\n",
-    "cmc_dnaisol_syn = syn.get('syn2279444', downloadLocation=wdir)\n",
+    "cmc_dnaisol_syn = syn.get('syn2279444', downloadLocation=wdir, ifcollision='overwrite.local')\n",
     "cmc_dnaisol = pd.read_csv(cmc_dnaisol_syn.path, index_col='Institution Dissection ID')"
    ]
   },
@@ -105,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genewiz_serialn_syn = syn.get('syn21982509', downloadLocation=wdir)\n",
+    "genewiz_serialn_syn = syn.get('syn21982509', downloadLocation=wdir, ifcollision='overwrite.local')\n",
     "genewiz_serialn = pd.read_csv(genewiz_serialn_syn.path, index_col='CMC_simple_id')"
    ]
   },
@@ -113,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspecting metadata"
+    "### Inspecting metadata"
    ]
   },
   {
@@ -4028,12 +4029,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## New manifests"
+    "## Producing new manifests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4049,37 +4050,89 @@
     }
    ],
    "source": [
-    "gsub_s3, btb_s3, gsam_s3 = s2n.make_manif_s3()"
+    "wdir = '/home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/'\n",
+    "gsub_s3, btb_s3, gsam_s3 = s2n.make_manif_s3(wdir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running NDATools Version 0.2.0\n",
+      "Opening log: /home/attila/NDAValidationResults/debug_log_20200512T184704.txt\n",
+      "\n",
+      "Validating files...\n",
+      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200512T184704.csv\n",
+      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200512T184704.csv\n",
+      "\n",
+      "All files have finished validating.\n",
+      "\n",
+      "The following files passed validation:\n",
+      "UUID 1be35b32-50e6-4f93-b808-3feccc0fd5ed: 2020-05-12-genomics_subject02.csv\n",
+      "UUID 47405dab-f8b1-42b3-8217-fed311e5b031: 2020-05-12-genomics_sample03.csv\n",
+      "UUID 8db07560-838a-4197-93b0-e6b757203896: 2020-05-12-nichd_btb02.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
+      " 33%|███▎      | 1/3 [00:01<00:02,  1.11s/it]\r",
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.18it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  2.14it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "if false; then\n",
     "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
-    "vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak AKIAQLRXOYC2FTERG7EK -sk 't/VC8gWjVmjbSOtqd3CPpzrRdmOXy8j40M2K2w47' -w 2020-05-12-gsub.csv 2020-05-12-btb.csv 2020-05-12-gsam.csv\n",
-    "fi"
+    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
+    "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
+    "$validate $manifests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 58231,\n",
+      "  \"iopub_port\": 46117,\n",
+      "  \"stdin_port\": 60147,\n",
+      "  \"control_port\": 48957,\n",
+      "  \"hb_port\": 60895,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"3390180b-c6469caf363e5f077215f435\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-4127cb45-109b-42e1-8471-d77eb25a1e6e.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
    "source": [
     "%connect_info"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
