refining submission to NDA

--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -4043,9 +4043,12 @@
      "text": [
       "Welcome, Attila Jones!\n",
       "\n",
-      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-05-12-nichd_btb02.csv\n",
-      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-05-12-genomics_subject02.csv\n",
-      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-05-12-genomics_sample03.csv\n"
+      "Institution Dissection ID for CMC_PITT_027 not found\n",
+      "Institution Dissection ID for CMC_PITT_027 not found\n",
+      "Institution Dissection ID for CMC_PITT_027 not found\n",
+      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-nichd_btb02.csv\n",
+      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-genomics_subject02.csv\n",
+      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-genomics_sample03.csv\n"
      ]
     }
    ],
@@ -4064,18 +4067,18 @@
      "output_type": "stream",
      "text": [
       "Running NDATools Version 0.2.0\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20200512T184704.txt\n",
+      "Opening log: /home/attila/NDAValidationResults/debug_log_20200603T133420.txt\n",
       "\n",
       "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200512T184704.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200512T184704.csv\n",
+      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200603T133420.csv\n",
+      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200603T133420.csv\n",
       "\n",
       "All files have finished validating.\n",
       "\n",
       "The following files passed validation:\n",
-      "UUID 1be35b32-50e6-4f93-b808-3feccc0fd5ed: 2020-05-12-genomics_subject02.csv\n",
-      "UUID 47405dab-f8b1-42b3-8217-fed311e5b031: 2020-05-12-genomics_sample03.csv\n",
-      "UUID 8db07560-838a-4197-93b0-e6b757203896: 2020-05-12-nichd_btb02.csv\n"
+      "UUID 658613e4-d035-4faa-824f-14c591fd2912: 2020-06-03-nichd_btb02.csv\n",
+      "UUID e2530385-11c3-473c-84af-5d85c9915b25: 2020-06-03-genomics_subject02.csv\n",
+      "UUID 1b5cce00-4977-4527-b97a-a6d23e391319: 2020-06-03-genomics_sample03.csv\n"
      ]
     },
     {
@@ -4084,9 +4087,10 @@
      "text": [
       "\r",
       "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:01<00:02,  1.11s/it]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.18it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.14it/s]\n"
+      " 33%|███▎      | 1/3 [00:00<00:01,  1.09it/s]\r",
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.46it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.85it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  2.30it/s]\n"
      ]
     }
    ],
@@ -4108,13 +4112,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 58231,\n",
-      "  \"iopub_port\": 46117,\n",
-      "  \"stdin_port\": 60147,\n",
-      "  \"control_port\": 48957,\n",
-      "  \"hb_port\": 60895,\n",
+      "  \"shell_port\": 50973,\n",
+      "  \"iopub_port\": 34125,\n",
+      "  \"stdin_port\": 38781,\n",
+      "  \"control_port\": 36089,\n",
+      "  \"hb_port\": 58365,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"3390180b-c6469caf363e5f077215f435\",\n",
+      "  \"key\": \"7665c13f-05eb3017d87ded38ee8020d7\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -4123,7 +4127,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-4127cb45-109b-42e1-8471-d77eb25a1e6e.json\n",
+      "    $> jupyter <app> --existing kernel-7969daa4-1626-455a-97d8-e81e53ac80f7.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
