fastqs from our S3 bucket for upload; one sample's id is ambiguous

--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -4059,6 +4059,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission\n",
+    "### Validating the manifests\n",
+    "\n",
+    "This is validation without submission (i.e without building the submission package)."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -4100,6 +4117,30 @@
     "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
     "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
     "$validate $manifests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building the submission package\n",
+    "\n",
+    "Now let's add the `--buildPackage` flag to build the submission package!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "if false; then\n",
+    "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
+    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
+    "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
+    "$validate -b $manifests\n",
+    "fi"
    ]
   },
   {
