--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -19,7 +28,8 @@
     "import synapseclient\n",
     "import cmc_submit2ndar as s2n\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ]
   },
   {
@@ -4043,12 +4053,9 @@
      "text": [
       "Welcome, Attila Jones!\n",
       "\n",
-      "Institution Dissection ID for CMC_PITT_027 not found\n",
-      "Institution Dissection ID for CMC_PITT_027 not found\n",
-      "Institution Dissection ID for CMC_PITT_027 not found\n",
-      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-nichd_btb02.csv\n",
-      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-genomics_subject02.csv\n",
-      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-03-genomics_sample03.csv\n"
+      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-nichd_btb02.csv\n",
+      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-genomics_subject02.csv\n",
+      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-genomics_sample03.csv\n"
      ]
     }
    ],
@@ -4058,11 +4065,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making sample_list for bsmn-pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gsam2sample_list(data_file='data_file1'):\n",
+    "    df = gsam_s3.loc[:, ['src_subject_id', data_file, data_file]]\n",
+    "    df.columns = ['#sample_id', 'file_name', 'location']\n",
+    "    df['#sample_id'] = [re.sub('^CMC_(.+)$', '\\\\1_NeuN_pl', y) for y in df['#sample_id']]\n",
+    "    df['location'] = ['s3://chesslab-bsmn/' + y for y in df['location']]\n",
+    "    df['file_name'] = [re.sub('^.*\\/', '', y) for y in df['file_name']]\n",
+    "    return(df)\n",
+    "\n",
+    "sample_list = pd.concat([gsam2sample_list(y) for y in ['data_file1', 'data_file2']])\n",
+    "sample_list = sample_list.sort_values(by=['#sample_id', 'file_name'])\n",
+    "slist_path = '/big/results/bsm/2020-04-22-upload-to-ndar-from-s3/sample_list'\n",
+    "sample_list.to_csv(slist_path, sep='\\t', header=True, index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4084,18 +4111,18 @@
      "output_type": "stream",
      "text": [
       "Running NDATools Version 0.2.0\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20200603T133420.txt\n",
+      "Opening log: /home/attila/NDAValidationResults/debug_log_20200605T124717.txt\n",
       "\n",
       "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200603T133420.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200603T133420.csv\n",
+      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200605T124717.csv\n",
+      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200605T124717.csv\n",
       "\n",
       "All files have finished validating.\n",
       "\n",
       "The following files passed validation:\n",
-      "UUID 658613e4-d035-4faa-824f-14c591fd2912: 2020-06-03-nichd_btb02.csv\n",
-      "UUID e2530385-11c3-473c-84af-5d85c9915b25: 2020-06-03-genomics_subject02.csv\n",
-      "UUID 1b5cce00-4977-4527-b97a-a6d23e391319: 2020-06-03-genomics_sample03.csv\n"
+      "UUID 484377ea-5e2e-4d6c-8717-fe6888c91e77: 2020-06-05-genomics_subject02.csv\n",
+      "UUID 7935d270-b821-4e4e-af9d-3717c5906401: 2020-06-05-nichd_btb02.csv\n",
+      "UUID db0c063e-d1d5-4ddf-94ae-94b02a756210: 2020-06-05-genomics_sample03.csv\n"
      ]
     },
     {
@@ -4104,10 +4131,9 @@
      "text": [
       "\r",
       "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.09it/s]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.46it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.85it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.30it/s]\n"
+      " 33%|███▎      | 1/3 [00:01<00:03,  1.55s/it]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.11s/it]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.66it/s]\n"
      ]
     }
    ],
@@ -4130,7 +4156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4145,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4153,13 +4179,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 50973,\n",
-      "  \"iopub_port\": 34125,\n",
-      "  \"stdin_port\": 38781,\n",
-      "  \"control_port\": 36089,\n",
-      "  \"hb_port\": 58365,\n",
+      "  \"shell_port\": 33339,\n",
+      "  \"iopub_port\": 48367,\n",
+      "  \"stdin_port\": 36597,\n",
+      "  \"control_port\": 44169,\n",
+      "  \"hb_port\": 34221,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"7665c13f-05eb3017d87ded38ee8020d7\",\n",
+      "  \"key\": \"658db742-c679459957da03fedcc55ee7\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -4168,7 +4194,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-7969daa4-1626-455a-97d8-e81e53ac80f7.json\n",
+      "    $> jupyter <app> --existing kernel-cfa980db-61e1-44fb-907b-8a5ce382d7df.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
