--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -135,11 +126,11 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'Individual Notes', 'Institution', 'Brain ID', 'SCZ Pair',\n",
-       "       'BP Pair', 'Changed (used Affy phenotype)', 'Reported Gender', 'Sex',\n",
-       "       'Ethnicity', 'Race', 'Genotype Inferred Ancestry', 'ageOfDeath',\n",
-       "       'Date of Death', 'Time of Death', 'Time of Death (Military)',\n",
-       "       'Autopsy ID', 'Brain Weight (in grams)', 'PMI (in hours)', 'pH', 'Dx',\n",
+       "Index(['Individual Notes', 'Institution', 'Brain ID', 'SCZ Pair', 'BP Pair',\n",
+       "       'Changed (used Affy phenotype)', 'Reported Gender', 'Sex', 'Ethnicity',\n",
+       "       'Race', 'Genotype Inferred Ancestry', 'ageOfDeath', 'Date of Death',\n",
+       "       'Time of Death', 'Time of Death (Military)', 'Autopsy ID',\n",
+       "       'Brain Weight (in grams)', 'PMI (in hours)', 'pH', 'Dx',\n",
        "       'primaryDiagnosisDetail', 'Presence or Absence of Dementia (Y/N)',\n",
        "       'CDR', 'Year of Autopsy', 'Neuropath', 'Neuropath desc',\n",
        "       'Gross Diagnosis', 'Benzodiazepines', 'Anticonvulsants', 'AntipsychTyp',\n",
@@ -4053,9 +4044,9 @@
      "text": [
       "Welcome, Attila Jones!\n",
       "\n",
-      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-nichd_btb02.csv\n",
-      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-genomics_subject02.csv\n",
-      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-05-genomics_sample03.csv\n"
+      "nichd_btb02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-08-nichd_btb02.csv\n",
+      "genomics_subject02 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-08-genomics_subject02.csv\n",
+      "genomics_sample03 written to /home/attila/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3/2020-06-08-genomics_sample03.csv\n"
      ]
     }
    ],
@@ -4073,7 +4064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4103,7 +4094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4111,18 +4102,18 @@
      "output_type": "stream",
      "text": [
       "Running NDATools Version 0.2.0\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20200605T124717.txt\n",
+      "Opening log: /home/attila/NDAValidationResults/debug_log_20200608T132528.txt\n",
       "\n",
       "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200605T124717.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200605T124717.csv\n",
+      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20200608T132528.csv\n",
+      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20200608T132528.csv\n",
       "\n",
       "All files have finished validating.\n",
       "\n",
       "The following files passed validation:\n",
-      "UUID 484377ea-5e2e-4d6c-8717-fe6888c91e77: 2020-06-05-genomics_subject02.csv\n",
-      "UUID 7935d270-b821-4e4e-af9d-3717c5906401: 2020-06-05-nichd_btb02.csv\n",
-      "UUID db0c063e-d1d5-4ddf-94ae-94b02a756210: 2020-06-05-genomics_sample03.csv\n"
+      "UUID 8b6bc5bd-fc81-4200-b7c2-95d5beebc087: 2020-06-08-genomics_subject02.csv\n",
+      "UUID ee76d27d-49b6-49da-b8bc-5e15a2b56b75: 2020-06-08-nichd_btb02.csv\n",
+      "UUID 25a67ad5-b2e8-488e-8f73-0bdae8f5b168: 2020-06-08-genomics_sample03.csv\n"
      ]
     },
     {
@@ -4131,16 +4122,17 @@
      "text": [
       "\r",
       "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:01<00:03,  1.55s/it]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.11s/it]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.66it/s]\n"
+      " 33%|███▎      | 1/3 [00:01<00:02,  1.22s/it]\r",
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.11it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.99it/s]\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
-    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
+    "#validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
+    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn -pre /\"\n",
     "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
     "$validate $manifests"
    ]
@@ -4156,14 +4148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "if false; then\n",
     "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
-    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
+    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn -pre GENEWIZ/30-317737003\"\n",
+    "#validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn\"\n",
     "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
     "$validate -b $manifests\n",
     "fi"
@@ -4171,7 +4164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4179,13 +4172,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 33339,\n",
-      "  \"iopub_port\": 48367,\n",
-      "  \"stdin_port\": 36597,\n",
-      "  \"control_port\": 44169,\n",
-      "  \"hb_port\": 34221,\n",
+      "  \"shell_port\": 37307,\n",
+      "  \"iopub_port\": 50619,\n",
+      "  \"stdin_port\": 51237,\n",
+      "  \"control_port\": 44679,\n",
+      "  \"hb_port\": 50967,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"658db742-c679459957da03fedcc55ee7\",\n",
+      "  \"key\": \"cc852086-b0dbff4f3520e8c3b766af2f\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -4194,7 +4187,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-cfa980db-61e1-44fb-907b-8a5ce382d7df.json\n",
+      "    $> jupyter <app> --existing kernel-13fc6d90-7670-4d32-97e7-25c6ba8da988.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
