annotate VCF with epigen state from Roadmap project

--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -4131,8 +4131,7 @@
    "source": [
     "%%bash\n",
     "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
-    "#validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w\"\n",
-    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn -pre /\"\n",
+    "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn -pre GENEWIZ/30-317737003\"\n",
     "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
     "$validate $manifests"
    ]
@@ -4156,7 +4155,6 @@
     "if false; then\n",
     "cd ~/projects/bsm/results/2020-04-22-upload-to-ndar-from-s3\n",
     "validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn -pre GENEWIZ/30-317737003\"\n",
-    "#validate=\"vtcmd -t title -d description -u $NDA_USER -p $NDA_PASSWORD -c 2965 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -w -s3 chesslab-bsmn\"\n",
     "manifests=\"$(date +%Y-%m-%d)*.csv\"\n",
     "$validate -b $manifests\n",
     "fi"
