annotating VCFs for bsm

--- a/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
+++ b/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
@@ -24,6 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Working locally\n",
     "### Getting callsets"
    ]
   },
@@ -162,14 +163,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alignment view\n",
+    "## Working on Ada\n",
     "\n",
-    "For this we need alignments, which are located on Ada.  Below I will demonstrate the following operatons:\n",
+    "Below I will demonstrate the following operatons:\n",
     "1. start an SSH session on Ada\n",
-    "1. locate the BAM file corresponding to the MSSM_106_NeuN_pl sample\n",
-    "1. view the second and last variant in the BAM file using the `viewvar` script\n",
-    "\n",
-    "Before the demo let me provide the usage of `viewvar`: "
+    "1. get position of variants from a VCF\n",
+    "1. view variants in the corresponding BAM file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connecting to Ada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "[local machine]$ ssh <username>@ada.1470mad.mssm.edu\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting positions from a VCF\n",
+    "Filtered callsets are to be found here in `/projects/bsm/attila/results/2020-06-05-filtered-callsets`.  To look at the positions of the callset for MSSM_106_NeuN_pl sample:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "[Ada]$ vcfdir=/projects/bsm/attila/results/2020-06-05-filtered-callsets\n",
+    "[Ada]$ vcf=$vcfdir/MSSM_106_brain.ploidy_50.filtered.vcf\n",
+    "[Ada]$ bcftools view -H $vcf | cut -f1-2\n",
+    "1\t43788142\n",
+    "1\t82063741\n",
+    "[...]\n",
+    "22\t43977690\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Viewing variants in a BAM file\n",
+    "This is done with the script `viewvar`. Its usage is given by the `-h` switch:"
    ]
   },
   {
@@ -194,14 +240,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `-l` switch places the variant at the left edge of the alignment view, whereas the `-c` switch centers the variant (this is the default behavior so the `-c` may be omitted). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the demo:"
+    "The `-l` switch places the variant at the left edge of the alignment view, whereas the `-c` switch centers the variant (this is the default behavior so the `-c` may be omitted).\n",
+    "\n",
+    "Now let's look at the second and last variant of the VCF!  These are (chrom pos):\n",
+    "\n",
+    "* 1 82063741\n",
+    "* 22 43977690"
    ]
   },
   {
@@ -210,7 +254,7 @@
    "source": [
     "```\n",
     "[local machine]$ ssh username@ada.1470mad.mssm.edu\n",
-    "[Ada]$ bam=bam=/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_pl.bam\n",
+    "[Ada]$ bam=/projects/bsm/alignments/MSSM_106/MSSM_106_NeuN_pl.bam\n",
     "[Ada]$ viewvar 1 82063741 $bam | less\n",
     "[Ada]$ viewvar 22 43977690 $bam | less\n",
     "```"
@@ -724,13 +768,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 37871,\n",
-      "  \"iopub_port\": 51269,\n",
-      "  \"stdin_port\": 50509,\n",
-      "  \"control_port\": 37765,\n",
-      "  \"hb_port\": 48583,\n",
+      "  \"shell_port\": 46691,\n",
+      "  \"iopub_port\": 40657,\n",
+      "  \"stdin_port\": 48039,\n",
+      "  \"control_port\": 47083,\n",
+      "  \"hb_port\": 39495,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"1778c023-2ac18c58826865ef60ecb6a1\",\n",
+      "  \"key\": \"63b6c7f6-d1a8b159e2faad77237fc677\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -739,7 +783,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-fe2081d7-0321-4793-b8aa-71446092e577.json\n",
+      "    $> jupyter <app> --existing kernel-d6fb0a21-be3b-4a23-a38b-136b4f6b5371.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
