Reorganized filtered VCFs

--- a/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
+++ b/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
@@ -54,8 +54,8 @@
     {
      "data": {
       "text/plain": [
-       "['/home/attila/projects/bsm/results/2020-06-05-filtered-callsets/MSSM_106_brain.ploidy_50.filtered.vcf',\n",
-       " '/home/attila/projects/bsm/results/2020-06-05-filtered-callsets/MSSM_109_brain.ploidy_50.filtered.vcf']"
+       "['/big/results/bsm/calls/filtered/MSSM_106_brain.ploidy_50.filtered.vcf',\n",
+       " '/big/results/bsm/calls/filtered/MSSM_109_brain.ploidy_50.filtered.vcf']"
       ]
      },
      "execution_count": 3,
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "e = synapseutils.sync.syncFromSynapse(syn, 'syn21897893', path='~/projects/bsm/results/2020-06-05-filtered-callsets')\n",
+    "e = synapseutils.sync.syncFromSynapse(syn, 'syn21897893', path='/big/results/bsm/calls/filtered')\n",
     "fpaths = [f.path for f in e]\n",
     "fpaths[:2]"
    ]
@@ -78,7 +78,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSSM_106_brain.ploidy_50.filtered-epigen.vcf\t27\n",
       "MSSM_106\t27\n",
       "MSSM_109\t52\n",
       "MSSM_118\t9\n",
@@ -98,7 +97,7 @@
    ],
    "source": [
     "%%bash\n",
-    "cd /home/attila/projects/bsm/results/2020-06-05-filtered-callsets/\n",
+    "cd /home/attila/projects/bsm/results/2020-06-05-filtered-callsets/filtered\n",
     "for f in *vcf; do\n",
     "echo -ne \"$f\\t\"\n",
     "bcftools view -H $f | wc -l\n",
@@ -119,36 +118,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1\t43788142\n",
-      "1\t82063741\n",
-      "1\t166060224\n",
-      "2\t283678\n",
-      "2\t99427525\n",
-      "2\t112425551\n",
-      "2\t203909037\n",
-      "2\t227287453\n",
-      "4\t76273821\n",
-      "4\t139540924\n",
-      "6\t40164483\n",
-      "6\t143541413\n",
-      "9\t3374188\n",
-      "10\t33474609\n",
-      "10\t52554008\n",
-      "10\t126238172\n",
-      "12\t11925758\n",
-      "12\t46471131\n",
-      "12\t58483907\n",
-      "12\t83652663\n",
-      "12\t130493454\n",
-      "15\t61039233\n",
-      "16\t1537659\n",
-      "16\t4509189\n",
-      "16\t64236891\n",
-      "19\t24279784\n",
-      "22\t43977690\n"
+      "[E::hts_open_format] Failed to open file MSSM_106_brain.ploidy_50.filtered.vcf\n",
+      "Failed to open MSSM_106_brain.ploidy_50.filtered.vcf: No such file or directory\n"
      ]
     }
    ],
