python script to annotate and read filtered VCFs

--- a/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
+++ b/notebook/2020-04-22-upload-to-ndar-from-s3/2020-04-22-upload-to-ndar-from-s3.ipynb
@@ -4161,6 +4161,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resubmitting on Ada\n",
+    "\n",
+    "The original submission from `attila-ThinkPad` was interrupted, canceled, and restarted on `Ada`.  A day later the NDA credentials expired and the submission had to be resumed with `vtcmd -r` command **including** the NDA credencials like this:\n",
+    "```\n",
+    "vtcmd -r 32164 -ak $AWS_ACCESSKEY -sk $AWS_SECRETACCESSKEY -s3 chesslab-bsmn -pre GENEWIZ/30-317737003\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
