--- a/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
+++ b/notebook/2020-06-05-filtered-callsets/2020-06-05-filtered-callsets.ipynb
@@ -4,14 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have a first look into the first set of filtered callsets.  We count the number of variants in each, look at variants' positions and the corresponding alignment at that position."
+    "In this article we have a first look into the first set of filtered callsets.  We count the number of variants in each, look at variants' positions and the corresponding alignment at that position."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +67,7 @@
        " '/big/results/bsm/calls/filtered/MSSM_109_brain.ploidy_50.filtered.vcf']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,22 +123,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[E::hts_open_format] Failed to open file MSSM_106_brain.ploidy_50.filtered.vcf\n",
-      "Failed to open MSSM_106_brain.ploidy_50.filtered.vcf: No such file or directory\n"
+      "1\t43788142\n",
+      "1\t82063741\n",
+      "1\t166060224\n",
+      "2\t283678\n",
+      "2\t99427525\n",
+      "2\t112425551\n",
+      "2\t203909037\n",
+      "2\t227287453\n",
+      "4\t76273821\n",
+      "4\t139540924\n",
+      "6\t40164483\n",
+      "6\t143541413\n",
+      "9\t3374188\n",
+      "10\t33474609\n",
+      "10\t52554008\n",
+      "10\t126238172\n",
+      "12\t11925758\n",
+      "12\t46471131\n",
+      "12\t58483907\n",
+      "12\t83652663\n",
+      "12\t130493454\n",
+      "15\t61039233\n",
+      "16\t1537659\n",
+      "16\t4509189\n",
+      "16\t64236891\n",
+      "19\t24279784\n",
+      "22\t43977690\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "cd /home/attila/projects/bsm/results/2020-06-05-filtered-callsets/\n",
-    "vcf=MSSM_106_brain.ploidy_50.filtered.vcf\n",
+    "vcf=MSSM_106_brain.ploidy_50.filtered-epigen.vcf\n",
     "bcftools view -H $vcf | cut -f1-2"
    ]
   },
@@ -194,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -742,13 +776,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 46691,\n",
-      "  \"iopub_port\": 40657,\n",
-      "  \"stdin_port\": 48039,\n",
-      "  \"control_port\": 47083,\n",
-      "  \"hb_port\": 39495,\n",
+      "  \"shell_port\": 54373,\n",
+      "  \"iopub_port\": 58121,\n",
+      "  \"stdin_port\": 39325,\n",
+      "  \"control_port\": 38521,\n",
+      "  \"hb_port\": 43153,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"63b6c7f6-d1a8b159e2faad77237fc677\",\n",
+      "  \"key\": \"87a1c297-f083d55c194f0b848f62595a\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -757,7 +791,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-d6fb0a21-be3b-4a23-a38b-136b4f6b5371.json\n",
+      "    $> jupyter <app> --existing kernel-b305e6f8-015b-4a6a-9508-f990e9cf9a52.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
