--- a/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
+++ b/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
@@ -624,7 +624,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fd0b715d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2ecf637610>"
       ]
      },
      "execution_count": 8,
@@ -813,7 +813,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1fc1afc550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2ecf0be450>"
       ]
      },
      "execution_count": 10,
@@ -958,7 +958,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1f8ad44f50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e92532690>"
       ]
      },
      "execution_count": 15,
@@ -1605,7 +1605,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1f8ab2abd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2e92047b50>"
       ]
      },
      "execution_count": 20,
