--- a/notebook/2020-05-20-genewiz-data-sizes/2020-05-20-genewiz-data-sizes.ipynb
+++ b/notebook/2020-05-20-genewiz-data-sizes/2020-05-20-genewiz-data-sizes.ipynb
@@ -33,6 +33,7 @@
     "import os.path\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
+    "import numpy as np\n",
     "syn = synapseclient.login()"
    ]
   },
@@ -89,12 +90,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The samples where the failed flowcell makes a difference in terms of yield"
+    "### Intermezzo: coverage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = '/big/data/refgenome/GRCh37/dna/hs37d5.dict'\n",
+    "l1 = ['sed', '-n', '/^@SQ/ {s/[SL]N://g; p}; /\\tY\\t/ q', dict]\n",
+    "p1 = subprocess.run(l1, capture_output=True)\n",
+    "l2 = ['cut', '-f', '2,3']\n",
+    "p2 = subprocess.run(l2, input=p1.stdout, capture_output=True)\n",
+    "chr_len = pd.read_csv(io.BytesIO(p2.stdout), sep='\\t', names=['chr', 'length'], index_col='chr')\n",
+    "chr_len.sum()\n",
+    "genewiz_report['Coverage'] = genewiz_report['Yield (Mbases)'] / np.float(chr_len.sum()) * 1e6\n",
+    "genewiz_report.to_csv('/home/attila/projects/bsm/results/2020-05-20-genewiz-data-sizes/coverage.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The samples where the failed flowcell makes a difference in terms of yield"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +129,12 @@
        "MSSM_162_NeuN_pl    60\n",
        "MSSM_192_NeuN_pl    27\n",
        "MSSM_269_NeuN_pl    14\n",
-       "PITT_027_NeuN_pl     1\n",
        "PITT_098_NeuN_pl    38\n",
+       "PITT_117_NeuN_pl     1\n",
        "Name: GENEWIZ_serialn, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +218,7 @@
        "Name: FASTQ size GiB, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,14 +405,14 @@
        "      <td>D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PITT_027_NeuN_pl</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>PITT_098_NeuN_pl</th>\n",
        "      <td>38</td>\n",
        "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PITT_117_NeuN_pl</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -406,11 +431,11 @@
        "MSSM_308_NeuN_pl               5                     5\n",
        "MSSM_362_NeuN_pl     F-MSSM-1346                     F\n",
        "MSSM_379_NeuN_pl     D-MSSM-1238                     D\n",
-       "PITT_027_NeuN_pl               1                     1\n",
-       "PITT_098_NeuN_pl              38                    38"
+       "PITT_098_NeuN_pl              38                    38\n",
+       "PITT_117_NeuN_pl               1                     1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,120 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Individual ID</th>\n",
-       "      <th>Tissue</th>\n",
-       "      <th>File name</th>\n",
-       "      <th>Modification time</th>\n",
-       "      <th>Created by</th>\n",
-       "      <th>Modified by</th>\n",
-       "      <th>CRAM size GiB</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>MSSM_027_NeuN_pl</th>\n",
-       "      <td>CMC_MSSM_027</td>\n",
-       "      <td>NeuN_pl</td>\n",
-       "      <td>MSSM_027_NeuN_pl.cram</td>\n",
-       "      <td>2020-05-02T15:56:53.425Z</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>59.431365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSSM_033_NeuN_pl</th>\n",
-       "      <td>CMC_MSSM_033</td>\n",
-       "      <td>NeuN_pl</td>\n",
-       "      <td>MSSM_033_NeuN_pl.cram</td>\n",
-       "      <td>2020-05-22T03:49:07.299Z</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>42.342533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSSM_056_NeuN_pl</th>\n",
-       "      <td>CMC_MSSM_056</td>\n",
-       "      <td>NeuN_pl</td>\n",
-       "      <td>MSSM_056_NeuN_pl.cram</td>\n",
-       "      <td>2020-05-23T12:22:06.700Z</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>153.715038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSSM_056_muscle</th>\n",
-       "      <td>CMC_MSSM_056</td>\n",
-       "      <td>muscle</td>\n",
-       "      <td>MSSM_056_muscle.cram</td>\n",
-       "      <td>2020-03-13T20:18:16.206Z</td>\n",
-       "      <td>@taejeong</td>\n",
-       "      <td>@cmolitor</td>\n",
-       "      <td>52.598372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSSM_065_NeuN_pl</th>\n",
-       "      <td>CMC_MSSM_065</td>\n",
-       "      <td>NeuN_pl</td>\n",
-       "      <td>MSSM_065_NeuN_pl.cram</td>\n",
-       "      <td>2020-05-21T09:30:39.895Z</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>@attilajones</td>\n",
-       "      <td>22.971872</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Individual ID   Tissue              File name  \\\n",
-       "MSSM_027_NeuN_pl  CMC_MSSM_027  NeuN_pl  MSSM_027_NeuN_pl.cram   \n",
-       "MSSM_033_NeuN_pl  CMC_MSSM_033  NeuN_pl  MSSM_033_NeuN_pl.cram   \n",
-       "MSSM_056_NeuN_pl  CMC_MSSM_056  NeuN_pl  MSSM_056_NeuN_pl.cram   \n",
-       "MSSM_056_muscle   CMC_MSSM_056   muscle   MSSM_056_muscle.cram   \n",
-       "MSSM_065_NeuN_pl  CMC_MSSM_065  NeuN_pl  MSSM_065_NeuN_pl.cram   \n",
-       "\n",
-       "                         Modification time    Created by   Modified by  \\\n",
-       "MSSM_027_NeuN_pl  2020-05-02T15:56:53.425Z  @attilajones  @attilajones   \n",
-       "MSSM_033_NeuN_pl  2020-05-22T03:49:07.299Z  @attilajones  @attilajones   \n",
-       "MSSM_056_NeuN_pl  2020-05-23T12:22:06.700Z  @attilajones  @attilajones   \n",
-       "MSSM_056_muscle   2020-03-13T20:18:16.206Z     @taejeong     @cmolitor   \n",
-       "MSSM_065_NeuN_pl  2020-05-21T09:30:39.895Z  @attilajones  @attilajones   \n",
-       "\n",
-       "                  CRAM size GiB  \n",
-       "MSSM_027_NeuN_pl      59.431365  \n",
-       "MSSM_033_NeuN_pl      42.342533  \n",
-       "MSSM_056_NeuN_pl     153.715038  \n",
-       "MSSM_056_muscle       52.598372  \n",
-       "MSSM_065_NeuN_pl      22.971872  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d49e44be1667>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mentity2df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mentities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mmapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-d49e44be1667>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mentity2df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mentities\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mmapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-d49e44be1667>\u001b[0m in \u001b[0;36mentity2df\u001b[0;34m(e)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msimple_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'_(muscle|NeuN_pl|NeuN_mn).*$'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mindiv_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'CMC_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msimple_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Individual ID'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindiv_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Tissue'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'^.*(muscle|NeuN_pl|NeuN_mn).*$'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\\\1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
     }
    ],
    "source": [
@@ -579,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,36 +516,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 45037,\n",
-      "  \"iopub_port\": 53931,\n",
-      "  \"stdin_port\": 46875,\n",
-      "  \"control_port\": 53889,\n",
-      "  \"hb_port\": 48717,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"c7b8f872-faec73d6a0cbb2d455bc2d33\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-f5b3da2a-0d13-4f29-a0d2-f5c929d1fcca.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
